--- a/turtlebot3.uproject
+++ b/turtlebot3.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "turtlebot3",
+			"Name": "rclUE_examples",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
