--- a/Config/DefaultEngineBase.ini
+++ b/Config/DefaultEngineBase.ini
@@ -13,9 +13,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/rclUE_examples")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/rclUE_examples")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="rclUE_examplesGameModeBase")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/rclUEExamples")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/rclUEExamples")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="rclUEExamplesGameModeBase")
 bUseFixedFrameRate=True
 FixedFrameRate=${FIXED_FRAME_RATE}
 TargetRTF=${TARGET_RTF}
