--- a/rclUEExamples.uproject
+++ b/rclUEExamples.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "rclUE_examples",
+			"Name": "rclUEExamples",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
