--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,9 @@
 ProjectID=48F637419C144E6D8AC4AADF873D2FCD
 CopyrightNotice=Copyright 2020-2021 Rapyuta Robotics Co., Ltd.
 
+
+[Staging]
+; DefaultEngineBase.ini & TemplateEngine.ini are used as a source template file to generate DefaultEngine.ini before running Sim, thus not packed
++DisallowedConfigFiles=rclUEExamples/Config/DefaultEngineBase.ini
++DisallowedConfigFiles=rclUEExamples/Config/TemplateEngine.ini
+; +AllowedConfigFiles=rclUEExamples/Config/DefaultSimSettings.ini
