update submodule and map

--- a/Config/DefaultRapyutaSimSettings.ini
+++ b/Config/DefaultRapyutaSimSettings.ini
@@ -4,6 +4,8 @@
 ; Blueprint class names (also used as their entity model names) to be registered as spawnable entity types
 BPSpawnableClassNames="BP_PhysicsCube"
 +BPSpawnableClassNames="BP_Conveyor"
++BPSpawnableClassNames="BP_BeltConveyor"
++BPSpawnableClassNames="BP_RollerConveyor"
 +BPSpawnableClassNames="BP_TurtlebotBurgerVehicle"
 +BPSpawnableClassNames="BP_TurtlebotWaffleVehicle"
 +BPSpawnableClassNames="BP_TurtlebotBurger"
