add character map

--- a/Config/DefaultRapyutaSimSettings.ini
+++ b/Config/DefaultRapyutaSimSettings.ini
@@ -6,6 +6,10 @@ BPSpawnableClassNames="BP_PhysicsCube"
 +BPSpawnableClassNames="BP_Conveyor"
 +BPSpawnableClassNames="BP_BeltConveyor"
 +BPSpawnableClassNames="BP_RollerConveyor"
++BPSpawnableClassNames="BP_SplineConveyor"
++BPSpawnableClassNames="BP_BeltSplineConveyor"
++BPSpawnableClassNames="BP_RollerSplineConveyor"
++BPSpawnableClassNames="BP_ROSCharacter"
 +BPSpawnableClassNames="BP_TurtlebotBurgerVehicle"
 +BPSpawnableClassNames="BP_TurtlebotWaffleVehicle"
 +BPSpawnableClassNames="BP_TurtlebotBurger"
