--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,13 @@ ExternalTest/rclUEExamples_tests/maps
 Content/Characters
 Content/ThirdPerson
 Content/LevelPrototyping
+Content/Audio
+Content/Blueprints
+Content/Meshes
+Content/Textures
+Content/VehicleVarietyPack
+Content/Mannequins
+Content/Materials
+Content/Fx
+Content/Materials
+Content/Sequenses
