--- a/Config/DefaultEngineBase.ini
+++ b/Config/DefaultEngineBase.ini
@@ -36,3 +36,7 @@ ContactOffsetMultiplier=0.010000
 
 [/Script/Engine.GameSession]
 MaxPlayers=10000
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
