--- a/Config/DefaultRapyutaSimSettings.ini
+++ b/Config/DefaultRapyutaSimSettings.ini
@@ -18,6 +18,6 @@ BPSpawnableClassNames="BP_PhysicsCube"
 +BPSpawnableClassNames="BP_RRTurtlebotWaffle"
 
 ; Asset paths of classes to be registered as spawnable entity types
-NativeSpawnableClassPaths=(("TurtlebotBurger", "/Script/RapyutaSimulationPlugins.TurtlebotBurger"), \
-                           ("TurtlebotBurgerVehicle", "/Script/RapyutaSimulationPlugins.TurtlebotBurgerVehicle"), \
-                           ("target_point", "/Script/Engine.TargetPoint")
+; NativeSpawnableClassPaths=(("TurtlebotBurger", "/Script/RapyutaSimulationPlugins.TurtlebotBurger"), \
+;                            ("TurtlebotBurgerVehicle", "/Script/RapyutaSimulationPlugins.TurtlebotBurgerVehicle"), \
+;                            ("target_point", "/Script/Engine.TargetPoint")
