--- a/Config/DefaultRapyutaSimSettings.ini
+++ b/Config/DefaultRapyutaSimSettings.ini
@@ -10,6 +10,7 @@ BPSpawnableClassNames="BP_PhysicsCube"
 +BPSpawnableClassNames="BP_BeltSplineConveyor"
 +BPSpawnableClassNames="BP_RollerSplineConveyor"
 +BPSpawnableClassNames="BP_ROSCharacter"
++BPSpawnableClassNames="BP_ROSSimpleCharacter"
 +BPSpawnableClassNames="BP_TurtlebotBurgerVehicle"
 +BPSpawnableClassNames="BP_TurtlebotWaffleVehicle"
 +BPSpawnableClassNames="BP_TurtlebotBurger"
