--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,9 @@ Content/Materials
 Content/Fx
 Content/Materials
 Content/Sequenses
+
+# Plugins
+Plugins/CustomMsgExample/Intermediate
+
+# Packaged result
+Linux
