--- a/Plugins/CustomMsgExample/custom_msg_config.yaml
+++ b/Plugins/CustomMsgExample/custom_msg_config.yaml
@@ -15,7 +15,7 @@ ignore_deprecated_msg: False # needs to be false to generate deprecated std_msgs
 ## pkgs and prefix for class
 target_pkgs: 
   # std_msgs: 'StdMsg'
-  # nav2_msgs: ''
+  # nav2_msgs: '' # even if it is not target msg, if that is dependency, it should be included here.
   rclue_example_custom_msgs : ''
 
 ## if dependency is "targe", it used same value as target
@@ -29,9 +29,11 @@ dependency:
   geometry_msgs: ''
   # action_msgs: ''
   # nav_msgs: ''
+  # nav2_msgs: ''
   # geographic_msgs: ''
   # unique_identifier_msgs: ''
   ue_msgs: ''
+
 
 ## additional dependency
 ## this dict is appended on dependency. 
@@ -39,6 +41,7 @@ dependency:
 # dependency_append: ''
   # your_msg: ''
 
+# Since UE has convention of class naming, we need to map ros msg name to s
 name_mapping:
   Covariance: 'Cov'
   Accel: 'Acc'
